Complete migration to common models generation for vajram_req. Fix all test cases