@@ -1,7 +1,6 @@
 package com.flipkart.krystal.vajram.codegen.common.models;
 
 import static com.flipkart.krystal.core.VajramID.vajramID;
-import static com.flipkart.krystal.datatypes.JavaType.create;
 import static com.flipkart.krystal.facets.FacetType.INJECTION;
 import static com.flipkart.krystal.vajram.utils.Constants.IMMUT_FACETS_CLASS_SUFFIX;
 import static com.google.common.base.Preconditions.checkNotNull;
@@ -18,21 +17,21 @@ import static javax.lang.model.element.Modifier.ABSTRACT;
 import com.flipkart.krystal.core.VajramID;
 import com.flipkart.krystal.data.FacetValues;
 import com.flipkart.krystal.data.FanoutDepResponses;
-import com.flipkart.krystal.data.IfAbsent;
-import com.flipkart.krystal.data.IfAbsent.Creator;
-import com.flipkart.krystal.data.IfAbsent.IfAbsentThen;
 import com.flipkart.krystal.data.ImmutableRequest;
 import com.flipkart.krystal.data.One2OneDepResponse;
 import com.flipkart.krystal.data.Request;
-import com.flipkart.krystal.datatypes.ApplicableToTypes;
-import com.flipkart.krystal.datatypes.DataType;
 import com.flipkart.krystal.datatypes.JavaType;
 import com.flipkart.krystal.facets.FacetType;
+import com.flipkart.krystal.model.IfAbsent;
+import com.flipkart.krystal.model.IfAbsent.Creator;
+import com.flipkart.krystal.model.IfAbsent.IfAbsentThen;
 import com.flipkart.krystal.vajram.Trait;
 import com.flipkart.krystal.vajram.Vajram;
 import com.flipkart.krystal.vajram.VajramDef;
 import com.flipkart.krystal.vajram.VajramDefRoot;
 import com.flipkart.krystal.vajram.annos.Generated;
+import com.flipkart.krystal.vajram.codegen.common.datatypes.CodeGenType;
+import com.flipkart.krystal.vajram.codegen.common.datatypes.DataTypeRegistry;
 import com.flipkart.krystal.vajram.codegen.common.models.DefaultFacetModel.DefaultFacetModelBuilder;
 import com.flipkart.krystal.vajram.codegen.common.models.DependencyModel.DependencyModelBuilder;
 import com.flipkart.krystal.vajram.codegen.common.models.FacetJavaType.Actual;
@@ -48,6 +47,7 @@ import com.google.common.base.Splitter;
 import com.google.common.collect.BiMap;
 import com.google.common.collect.HashBiMap;
 import com.google.common.collect.ImmutableBiMap;
+import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.Streams;
 import com.google.common.primitives.Primitives;
@@ -57,7 +57,6 @@ import com.squareup.javapoet.CodeBlock;
 import com.squareup.javapoet.ParameterizedTypeName;
 import com.squareup.javapoet.TypeName;
 import com.squareup.javapoet.TypeSpec;
-import com.squareup.javapoet.TypeSpec.Builder;
 import jakarta.inject.Inject;
 import java.io.PrintWriter;
 import java.lang.reflect.ParameterizedType;
@@ -81,7 +80,6 @@ import java.util.stream.Stream;
 import javax.annotation.processing.ProcessingEnvironment;
 import javax.annotation.processing.RoundEnvironment;
 import javax.lang.model.element.AnnotationMirror;
-import javax.lang.model.element.AnnotationValue;
 import javax.lang.model.element.Element;
 import javax.lang.model.element.ElementKind;
 import javax.lang.model.element.ExecutableElement;
@@ -106,14 +104,13 @@ import lombok.EqualsAndHashCode;
 import lombok.Getter;
 import lombok.ToString;
 import lombok.extern.slf4j.Slf4j;
-import org.checkerframework.checker.nullness.qual.NonNull;
 import org.checkerframework.checker.nullness.qual.Nullable;
 
 @SuppressWarnings("ClassWithTooManyMethods")
 @Slf4j
-public class Utils {
+public class CodeGenUtility {
 
-  private static final boolean DEBUG = true;
+  private static final boolean DEBUG = false;
 
   private static final ImmutableMap<Class<?>, String> DISALLOWED_FACET_TYPES =
       ImmutableMap.<Class<?>, String>builder()
@@ -137,12 +134,14 @@ public class Utils {
   private final Types typeUtils;
   private final Elements elementUtils;
   private final Class<?> generator;
+  @Getter private final DataTypeRegistry dataTypeRegistry;
 
-  public Utils(ProcessingEnvironment processingEnv, Class<?> generator) {
+  public CodeGenUtility(ProcessingEnvironment processingEnv, Class<?> generator) {
     this.processingEnv = processingEnv;
     this.typeUtils = processingEnv.getTypeUtils();
     this.elementUtils = processingEnv.getElementUtils();
     this.generator = generator;
+    this.dataTypeRegistry = new DataTypeRegistry();
   }
 
   public static ClassName toClassName(String depReqClassName) {
@@ -161,9 +160,9 @@ public class Utils {
     return stream(annotations).map(aClass -> AnnotationSpec.builder(aClass).build()).toList();
   }
 
-  public static @NonNull IfAbsent getIfAbsent(ExecutableElement method) {
-    // Check if the method has the @IfNoValue annotation
-    IfAbsent ifAbsent = method.getAnnotation(IfAbsent.class);
+  public IfAbsent getIfAbsent(Element element) {
+    // Check if the element has the @IfNoValue annotation
+    IfAbsent ifAbsent = element.getAnnotation(IfAbsent.class);
     if (ifAbsent == null) {
       ifAbsent = Creator.create(IfAbsentThen.WILL_NEVER_FAIL, "");
     }
@@ -216,69 +215,6 @@ public class Utils {
     if (returnType.getKind() == TypeKind.ARRAY) {
       error("Model root methods must not return arrays. Use List instead.", method);
     }
-
-    DataType<?> dataType = new DeclaredTypeVisitor<>(this, method).visit(returnType);
-
-    validateIfNoValueStrategyApplicability(method, dataType);
-  }
-
-  public void validateIfNoValueStrategyApplicability(Element typedElement, DataType<?> dataType) {
-    IfAbsent ifNull = typedElement.getAnnotation(IfAbsent.class);
-    if (ifNull != null) {
-      IfAbsentThen ifNullThen = ifNull.value();
-      @Nullable ApplicableToTypes applicableToTypes;
-      try {
-        applicableToTypes =
-            IfAbsentThen.class.getField(ifNullThen.name()).getAnnotation(ApplicableToTypes.class);
-      } catch (NoSuchFieldException e) {
-        // This should never happen since we're using the enum value's name
-        throw errorAndThrow(
-            "Failed to access field " + ifNullThen.name() + " in IfNoValue.Strategy enum",
-            typedElement);
-      }
-
-      if (applicableToTypes != null) {
-        List<JavaType<Object>> applicableTypes =
-            stream(applicableToTypes.value()).map(JavaType::create).toList();
-        boolean isApplicableToAll = applicableToTypes.all();
-
-        ProcessingEnvironment processingEnv = processingEnv();
-        Types typeUtils = processingEnv.getTypeUtils();
-        TypeMirror rawFacetType = typeUtils.erasure(dataType.javaModelType(processingEnv));
-        if (!applicableTypes.isEmpty()) {
-          // Get the facet's data type
-          boolean isCompatible = false;
-
-          // Check if the facet's type is compatible with any of the applicable types
-          for (JavaType<Object> applicableType : applicableTypes) {
-            if (typeUtils.isSameType(rawFacetType, applicableType.javaModelType(processingEnv))) {
-              isCompatible = true;
-              break;
-            }
-          }
-
-          if (!isCompatible) {
-            error(
-                String.format(
-                    "The IfNoValue.Strategy.%s is not applicable to data with type '%s'. "
-                        + "This strategy is only applicable to the following types: %s",
-                    ifNullThen.name(),
-                    rawFacetType,
-                    applicableTypes.stream()
-                        .map(JavaType::canonicalClassName)
-                        .collect(Collectors.joining(","))),
-                typedElement);
-          }
-        } else if (!isApplicableToAll) {
-          error(
-              String.format(
-                  "The IfNoValue.Strategy.%s is not applicable to data of type '%s'. "
-                      + "This strategy is not applicable to any types.",
-                  ifNullThen.name(), rawFacetType),
-              typedElement);
-        }
-      }
-    }
   }
 
   public boolean isNullable(TypeMirror typeMirror) {
@@ -297,7 +233,7 @@ public class Utils {
 
   public TypeMirror getOptionalInnerType(TypeMirror optionalType) {
     if (!isOptional(optionalType)) {
-      throw new IllegalArgumentException("Type %s is not Optional".formatted(optionalType));
+      return optionalType;
     }
 
     if (optionalType instanceof DeclaredType declaredType) {
@@ -358,10 +294,10 @@ public class Utils {
     } else {
       boolean localDevAccessible = codeGenParams.isDevAccessible() && codeGenParams.isLocal();
       if (localDevAccessible) {
-        IfAbsent ifAbsent = facet.facetField().getAnnotation(IfAbsent.class);
+        IfAbsent ifAbsent = getIfAbsent(facet.facetField());
         // Developers should not deal with boxed types. So we need to return the actual type or
         // an Optional wrapper as needed
-        if (ifAbsent != null && ifAbsent.value().isMandatoryOnServer()) {
+        if (ifAbsent.value().isMandatoryOnServer()) {
           return new Actual(this);
         }
         // This means the facet is either conditionally or always optional
@@ -518,10 +454,10 @@ public class Utils {
             () -> getNextAvailableFacetId(takenFacetIds, nextFacetId)));
     facetBuilder.name(facetName);
     facetBuilder.documentation(elementUtils.getDocComment(facetField));
-    DataType<Object> dataType =
+    CodeGenType dataType =
         facetField
             .asType()
-            .accept(new DeclaredTypeVisitor<>(this, facetField, DISALLOWED_FACET_TYPES), null);
+            .accept(new DeclaredTypeVisitor(this, facetField, DISALLOWED_FACET_TYPES), null);
     facetBuilder.dataType(dataType);
     EnumSet<FacetType> facetTypes = EnumSet.noneOf(FacetType.class);
     if (isInput) {
@@ -599,9 +535,8 @@ public class Utils {
               .formatted(depField.getSimpleName(), vajramId, vajramReqType.get(), vajramType.get()),
           depField);
     } else {
-      DataType<?> declaredDataType =
-          new DeclaredTypeVisitor<@NonNull Object>(this, depField, DISALLOWED_FACET_TYPES)
-              .visit(depField.asType());
+      CodeGenType declaredDataType =
+          new DeclaredTypeVisitor(this, depField, DISALLOWED_FACET_TYPES).visit(depField.asType());
       TypeElement vajramOrReqElement =
           checkNotNull((TypeElement) processingEnv.getTypeUtils().asElement(vajramOrReqType));
       VajramInfoLite depVajramInfoLite = computeVajramInfoLite(vajramOrReqElement);
@@ -632,7 +567,7 @@ public class Utils {
     String vajramClassSimpleName = vajramOrReqClass.getSimpleName().toString();
     ImmutableBiMap<Integer, String> facetIdNameMappings = ImmutableBiMap.of();
     VajramID vajramId;
-    DataType<Object> responseType;
+    CodeGenType responseType;
     String packageName = elementUtils.getPackageOf(vajramOrReqClass).getQualifiedName().toString();
     if (isRawAssignable(vajramOrReqClass.asType(), Request.class)) {
       facetIdNameMappings =
@@ -654,8 +589,7 @@ public class Utils {
               vajramClassSimpleName.substring(
                   0, vajramClassSimpleName.length() - Constants.REQUEST_SUFFIX.length()));
       responseType =
-          new DeclaredTypeVisitor<@NonNull Object>(
-                  this, responseTypeElement, DISALLOWED_FACET_TYPES)
+          new DeclaredTypeVisitor(this, responseTypeElement, DISALLOWED_FACET_TYPES)
               .visit(responseTypeMirror);
     } else if (isRawAssignable(vajramOrReqClass.asType(), VajramDefRoot.class)) {
       Vajram vajram = vajramOrReqClass.getAnnotation(Vajram.class);
@@ -686,8 +620,7 @@ public class Utils {
       }
       vajramId = vajramID(vajramClassSimpleName);
       responseType =
-          new DeclaredTypeVisitor<@NonNull Object>(
-                  this, responseTypeElement, DISALLOWED_FACET_TYPES)
+          new DeclaredTypeVisitor(this, responseTypeElement, DISALLOWED_FACET_TYPES)
               .visit(responseTypeMirror);
     } else {
       throw new IllegalArgumentException(
@@ -751,7 +684,8 @@ public class Utils {
     List<? extends TypeMirror> typeParameters =
         getTypeParamTypes(
             vajramOrReqType,
-            elementUtils.getTypeElement(requireNonNull(targetClass.getCanonicalName())));
+            requireNonNull(
+                elementUtils.getTypeElement(requireNonNull(targetClass.getCanonicalName()))));
     if (typeParameters.size() > typeParamIndex) {
       return typeParameters.get(typeParamIndex);
     } else {
@@ -762,12 +696,7 @@ public class Utils {
     }
   }
 
-  /**
-   * @param childTypeElement
-   * @param targetParentClass
-   * @return
-   */
-  public List<? extends TypeMirror> getTypeParamTypes(
+  public ImmutableList<TypeMirror> getTypeParamTypes(
       TypeElement childTypeElement, TypeElement targetParentClass) {
     List<TypeMirror> currentTypes = List.of(childTypeElement.asType());
     note("VajramDef: %s".formatted(childTypeElement));
@@ -803,10 +732,14 @@ public class Utils {
       }
     } while (!currentTypes.isEmpty() && targetType == null);
     if (targetType != null) {
-      List<? extends TypeMirror> typeParameters = targetType.getTypeArguments();
-      return typeParameters;
+      return ImmutableList.copyOf(getTypeMirrors(targetType));
     }
-    return List.of();
+    return ImmutableList.of();
+  }
+
+  private static List<? extends TypeMirror> getTypeMirrors(DeclaredType targetType) {
+    List<? extends TypeMirror> typeParameters = targetType.getTypeArguments();
+    return typeParameters;
   }
 
   public void note(CharSequence message) {
@@ -817,9 +750,9 @@ public class Utils {
     }
   }
 
-  public VajramValidationException errorAndThrow(String message, @Nullable Element element) {
+  public CodeValidationException errorAndThrow(String message, @Nullable Element element) {
     error(message, element);
-    return new VajramValidationException(message);
+    return new CodeValidationException(message);
   }
 
   public void error(String message, @Nullable Element element) {
@@ -851,16 +784,12 @@ public class Utils {
     return vajramName + Constants.FACETS_CLASS_SUFFIX;
   }
 
-  public static String getImmutFacetsClassname(String vajramName) {
+  public static String getImmutFacetsClassName(String vajramName) {
     return vajramName + IMMUT_FACETS_CLASS_SUFFIX;
   }
 
-  public TypeName toTypeName(DataType<?> dataType) {
-    return TypeName.get(toTypeMirror(dataType));
-  }
-
-  public TypeMirror toTypeMirror(DataType<?> dataType) {
-    return dataType.javaModelType(processingEnv);
+  public TypeName toTypeName(CodeGenType dataType) {
+    return TypeName.get(dataType.javaModelType(processingEnv));
   }
 
   public static TypeName toTypeName(Type typeArg) {
@@ -869,7 +798,7 @@ public class Utils {
       final Type[] typeArgs = parameterizedType.getActualTypeArguments();
       return ParameterizedTypeName.get(
           (ClassName) toTypeName(rawType),
-          stream(typeArgs).map(Utils::toTypeName).toArray(TypeName[]::new));
+          stream(typeArgs).map(CodeGenUtility::toTypeName).toArray(TypeName[]::new));
     } else {
       if (typeArg instanceof Class<?>) {
         return ClassName.get(Primitives.wrap((Class<?>) typeArg));
@@ -924,21 +853,22 @@ public class Utils {
    * Creates a class builder with the given class name. If the className is a blank string, then the
    * builder represents an anonymous class.
    *
-   * @param className fully qualifield class name
+   * @param className fully qualified class name
    * @return a class builder with the given class name, with the {@link Generated} annotation
    *     applied on the class
    */
-  public Builder classBuilder(String className) {
-    Builder classBuilder;
+  public TypeSpec.Builder classBuilder(String className) {
+    TypeSpec.Builder classBuilder;
     if (className.isBlank()) {
       classBuilder = TypeSpec.anonymousClassBuilder("");
     } else {
       classBuilder = TypeSpec.classBuilder(className);
     }
-    return addDefaultAnnotations(classBuilder);
+    addDefaultAnnotations(classBuilder);
+    return classBuilder;
   }
 
-  private Builder addDefaultAnnotations(Builder classBuilder) {
+  private void addDefaultAnnotations(TypeSpec.Builder classBuilder) {
     classBuilder.addAnnotation(
         AnnotationSpec.builder(SuppressWarnings.class)
             .addMember(
@@ -949,10 +879,9 @@ public class Utils {
                     .collect(joining(",", "{", "}")))
             .build());
     addGeneratedAnnotations(classBuilder);
-    return classBuilder;
   }
 
-  public void addGeneratedAnnotations(Builder classBuilder) {
+  public void addGeneratedAnnotations(TypeSpec.Builder classBuilder) {
     classBuilder
         .addAnnotation(
             AnnotationSpec.builder(Generated.class)
@@ -969,18 +898,19 @@ public class Utils {
    * Creates a class builder with the given class name. If the interfaceName is a blank string, then
    * the builder represents an anonymous class.
    *
-   * @param interfaceName fully qualifield class name
+   * @param interfaceName fully qualified class name
    * @return a class builder with the given class name, with the {@link Generated} annotation
    *     applied on the class
    */
-  public Builder interfaceBuilder(String interfaceName) {
-    Builder interfaceBuilder;
+  public TypeSpec.Builder interfaceBuilder(String interfaceName) {
+    TypeSpec.Builder interfaceBuilder;
     if (interfaceName.isBlank()) {
-      throw new RuntimeException("interface name connot be blank");
+      throw new RuntimeException("interface name cannot be blank");
     } else {
       interfaceBuilder = TypeSpec.interfaceBuilder(interfaceName);
     }
-    return addDefaultAnnotations(interfaceBuilder);
+    addDefaultAnnotations(interfaceBuilder);
+    return interfaceBuilder;
   }
 
   public TypeAndName box(TypeAndName javaType) {
@@ -1031,17 +961,17 @@ public class Utils {
         ClassName.get(FanoutDepResponses.class), requestType.typeName(), box(facetType).typeName());
   }
 
-  TypeAndName getTypeName(DataType<?> dataType, List<AnnotationSpec> typeAnnotations) {
+  TypeAndName getTypeName(CodeGenType dataType, List<AnnotationSpec> typeAnnotations) {
     TypeMirror javaModelType = dataType.javaModelType(processingEnv);
     return new TypeAndName(
         TypeName.get(javaModelType).annotated(typeAnnotations), javaModelType, typeAnnotations);
   }
 
-  public TypeAndName getTypeName(DataType<?> dataType) {
+  public TypeAndName getTypeName(CodeGenType dataType) {
     return getTypeName(dataType, List.of());
   }
 
-  public DataType<?> getDataType(FacetGenModel abstractInput) {
+  public CodeGenType getDataType(FacetGenModel abstractInput) {
     if (abstractInput instanceof DefaultFacetModel facetDef) {
       return facetDef.dataType();
     } else if (abstractInput instanceof DependencyModel dep) {
@@ -1050,21 +980,6 @@ public class Utils {
       throw new UnsupportedOperationException(
           "Unable to extract datatype from facet : %s".formatted(abstractInput));
     }
-  }
-
-  public DataType<?> toDataType(TypeMirror typeMirror) {
-    Element element = processingEnv.getTypeUtils().asElement(typeMirror);
-    if (!(element instanceof TypeElement typeElement)) {
-      return new DeclaredTypeVisitor<>(this, null).visit(typeMirror, null);
-    }
-
-    DataType[] dataTypes = new DataType[0];
-    if (typeMirror instanceof DeclaredType declaredType) {
-      dataTypes =
-          declaredType.getTypeArguments().stream().map(this::toDataType).toArray(DataType[]::new);
-    }
-
-    return create(typeElement.getQualifiedName().toString(), dataTypes);
   }
 
   @SuppressWarnings("method.invocation")
@@ -1115,8 +1030,7 @@ public class Utils {
     return ifAbsent != null && ifAbsent.value().isMandatoryOnServer();
   }
 
-  public String getJavaTypeCreationCode(
-      JavaType<?> javaType, List<TypeName> collectClassNames, VariableElement facetField) {
+  public String getJavaTypeCreationCode(CodeGenType javaType, List<TypeName> collectClassNames) {
     TypeMirror typeMirror = javaType.javaModelType(processingEnv);
     collectClassNames.add(ClassName.get(JavaType.class));
     if (javaType.typeParameters().isEmpty()) {
@@ -1126,23 +1040,16 @@ public class Utils {
       collectClassNames.add(TypeName.get(processingEnv.getTypeUtils().erasure(typeMirror)));
       return "$T.create($T.class, "
           + javaType.typeParameters().stream()
-              .map(
-                  dataType -> {
-                    if (!(dataType instanceof JavaType<?> typeParamType)) {
-                      error("Unrecognised data type %s".formatted(dataType), facetField);
-                      return "";
-                    } else {
-                      return getJavaTypeCreationCode(typeParamType, collectClassNames, facetField);
-                    }
-                  })
+              .map(dataType -> getJavaTypeCreationCode(dataType, collectClassNames))
               .collect(Collectors.joining(","))
           + ")";
     }
   }
 
   /**
+   * Returns the source output path
+   *
    * @param codeGenElement the element for which code gen is being done
-   * @return the source output path
    */
   public Path detectSourceOutputPath(@Nullable Element codeGenElement) {
     Path sourcePath;
@@ -1166,17 +1073,14 @@ public class Utils {
   }
 
   @SuppressWarnings("unchecked")
-  public <T> T getAnnotationElement(AnnotationMirror parentModelRootAnno, String annoElement) {
-    AnnotationValue annoValue =
-        parentModelRootAnno.getElementValues().entrySet().stream()
+  public <T> T getAnnotationElement(
+      AnnotationMirror parentModelRootAnno, String annoElement, Class<T> type) {
+    return type.cast(
+        elementUtils.getElementValuesWithDefaults(parentModelRootAnno).entrySet().stream()
             .filter(e -> e.getKey().getSimpleName().contentEquals(annoElement))
             .findAny()
             .map(Entry::getValue)
-            .orElse(null);
-    if (annoValue != null) {
-      return (T) annoValue.getValue();
-    } else {
-      return null;
-    }
+            .orElseThrow(AssertionError::new)
+            .getValue());
   }
 }
